Project

General

Profile

Actions

Bug #48073

closed

radosgw_admin_rest failure: bucket info API gets NoSuchKey, expects NoSuchBucket

Added by Casey Bodley over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2020-11-01T20:04:33.979 INFO:tasks.radosgw_admin_rest:radosgw-admin-rest: ['bucket', 'info'] {'bucket': 'doesnotexist'}
2020-11-01T20:04:33.982 INFO:tasks.radosgw_admin_rest: json result: {'Code': 'NoSuchKey', 'RequestId': 'tx000000000000000000052-005f9f14d1-107a-default', 'HostId': '107a-default-default'}
2020-11-01T20:04:33.983 ERROR:teuthology.run_tasks:Saw exception from tasks.
Traceback (most recent call last):
  File "/home/teuthworker/src/git.ceph.com_git_teuthology_master/teuthology/run_tasks.py", line 90, in run_tasks
    manager = run_one_task(taskname, ctx=ctx, config=config)
  File "/home/teuthworker/src/git.ceph.com_git_teuthology_master/teuthology/run_tasks.py", line 69, in run_one_task
    return task(**kwargs)
  File "/home/teuthworker/src/git.ceph.com_ceph_master/qa/tasks/radosgw_admin_rest.py", line 470, in task
    assert out['Code'] == 'NoSuchBucket'
AssertionError

ex: http://qa-proxy.ceph.com/teuthology/teuthology-2020-10-31_03:05:02-rgw-master-distro-basic-smithi/5577054/teuthology.log

Related issues 1 (0 open1 closed)

Related to rgw - Bug #45193: Admin API returns 200 instead of 404 for Get Bucket InfoResolvedMark Kogan

Actions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Related to Bug #45193: Admin API returns 200 instead of 404 for Get Bucket Info added
Actions #3

Updated by Mark Kogan over 3 years ago

  • Pull request ID set to 37929
Actions #4

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Casey Bodley over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by Mark Kogan over 3 years ago

(This tracker issue is a followup to #45193)

Actions

Also available in: Atom PDF